==> wirepas/wm-sdk/mcu/efr/efr32/hal/i2c.c <==
#include <stdint.h>
#include <stdbool.h>
#include <string.h>
#include "board.h"
#include "api.h"
#include "mcu.h"
#include "i2c.h"
#include "vendor/em_cmu.h"  // For CMU_ClockFreqGet(), cmuClock_HFPER
#define I2C_IRQn            I2C1_IRQn
#define I2C_DEV             I2C1
#define I2C_MODULE          1
#define I2C_CLKEN0_BIT      CMU_CLKEN0_I2C1
#define I2C_HFPERCLKEN0_BIT CMU_HFPERCLKEN0_I2C1
#define I2C_IRQn            I2C0_IRQn
#define I2C_DEV             I2C0
#define I2C_MODULE          0
#define I2C_CLKEN0_BIT      CMU_CLKEN0_I2C0
#define I2C_HFPERCLKEN0_BIT CMU_HFPERCLKEN0_I2C0

static void configure_gpios(bool pullup)
{
    //Configure SCL GPIO
    hal_gpio_set(BOARD_I2C_GPIO_PORT, BOARD_I2C_SCL_PIN);
    hal_gpio_set_mode(BOARD_I2C_GPIO_PORT,
                      BOARD_I2C_SCL_PIN,
                      pullup ? GPIO_MODE_OUT_OD_PU :
                               GPIO_MODE_OUT_OD_NOPULL);

    //Configure SDA GPIO
    hal_gpio_set(BOARD_I2C_GPIO_PORT, BOARD_I2C_SDA_PIN);
    hal_gpio_set_mode(BOARD_I2C_GPIO_PORT,
                      BOARD_I2C_SDA_PIN,
                      pullup ? GPIO_MODE_OUT_OD_PU :
                               GPIO_MODE_OUT_OD_NOPULL);

#ifdef _SILICON_LABS_32B_SERIES_2
    // Route GPIO pins to I2C module
    GPIO->I2CROUTE[I2C_MODULE].SDAROUTE = (GPIO->I2CROUTE[I2C_MODULE].SDAROUTE & ~_GPIO_I2C_SDAROUTE_MASK)
                                        | (BOARD_I2C_GPIO_PORT << _GPIO_I2C_SDAROUTE_PORT_SHIFT
                                        | (BOARD_I2C_SDA_PIN << _GPIO_I2C_SDAROUTE_PIN_SHIFT));
    GPIO->I2CROUTE[I2C_MODULE].SCLROUTE = (GPIO->I2CROUTE[I2C_MODULE].SCLROUTE & ~_GPIO_I2C_SCLROUTE_MASK)
                                        | (BOARD_I2C_GPIO_PORT << _GPIO_I2C_SCLROUTE_PORT_SHIFT
                                        | (BOARD_I2C_SCL_PIN << _GPIO_I2C_SCLROUTE_PIN_SHIFT));
    GPIO->I2CROUTE[I2C_MODULE].ROUTEEN = GPIO_I2C_ROUTEEN_SDAPEN | GPIO_I2C_ROUTEEN_SCLPEN;
#else
    // Choose routing of SDA and SCL GPIO to the I2C peripheral
    I2C_DEV->ROUTELOC0 = BOARD_I2C_ROUTELOC_SDALOC | BOARD_I2C_ROUTELOC_SCLLOC;

    // Enable routing of SDA and SCL to the I2C peripheral
    I2C_DEV->ROUTEPEN = I2C_ROUTEPEN_SDAPEN | I2C_ROUTEPEN_SCLPEN;
#endif
}

static bool set_frequency(uint32_t f_scl)
{
    //Clock source for I2C interface
#ifdef _SILICON_LABS_32B_SERIES_2
#ifdef USE_I2C0
    uint32_t f_i2cclk = CMU_ClockFreqGet(cmuClock_LSPCLK);
#elif defined USE_I2C1
    uint32_t f_i2cclk = CMU_ClockFreqGet(cmuClock_PCLK);
#endif
#elif defined _SILICON_LABS_32B_SERIES_1
    // Read HFPERCLK frequency
    uint32_t f_i2cclk = CMU_ClockFreqGet(cmuClock_HFPER);
#endif

    // Calculate required divisor
    //
    // div = (f_i2cclk / f_scl - 8) / (n_low + n_high) - 1
    //
    // , where
    //      f_i2cclk: I2C clock source frequency, in Hz
    //      f_scl: Desired SCL frequency, in Hz
    //      n_low: low period counter, 4 for standard clock
    //      n_high: high period counter, 4 for standard clock
    if (f_scl == 0)
    {
        // DC SCL not supported
        return false;
    }
    uint32_t div = f_i2cclk / f_scl;
    if (div < (1 * 8 + 8))
    {
        // Requested SCL clock frequency too fast
        return false;
    }
    div = (div - 8) / 8 - 1;
    if (div > (_I2C_CLKDIV_DIV_MASK >> _I2C_CLKDIV_DIV_SHIFT))
    {
        // Requested SCL clock frequency too slow
        return false;
    }

    // Set I2C SCL frequency
    I2C_DEV->CLKDIV = div;

    return true;
}

i2c_res_e I2C_init(i2c_conf_t * conf_p)
{
    if (m_state != I2C_SM_ST_UNINITIALIZED)
    {
        return I2C_RES_ALREADY_INITIALIZED;
    }

    // Mark I2C driver as initialized
    m_state = I2C_SM_ST_IDLE;

    // Turn on clock to the I2C peripheral during configuration
    enable_clock(true);

    // Disable I2C peripheral interrupts, clear pending interrupt flags
    enable_interrupts(false, true);

    // Enable I2C IRQ
    Sys_clearFastAppIrq(I2C_IRQn);
    Sys_enableFastAppIrq(I2C_IRQn,
                         APP_LIB_SYSTEM_IRQ_PRIO_HI,
                         I2C_IRQHandler);

    // Enable I2C peripheral: arbitration disabled, 4:4 clock periods
#ifdef _SILICON_LABS_32B_SERIES_2
    I2C_DEV->CTRL_SET = I2C_CTRL_ARBDIS |
                        I2C_CTRL_CLHR_STANDARD | I2C_CTRL_TXBIL_EMPTY;
    I2C_DEV->EN_SET = I2C_EN_EN;
#else
    I2C_DEV->CTRL = I2C_CTRL_EN | I2C_CTRL_ARBDIS |
                    I2C_CTRL_CLHR_STANDARD | I2C_CTRL_TXBIL_EMPTY;
#endif

    // Configure SCL frequency
    if (!set_frequency(conf_p->clock))
    {
        // Invalid SCL frequency, return peripheral to the reset state
        I2C_close();
        return I2C_RES_INVALID_CONFIG;
    }
    // Issue an ABORT command to make sure the peripheral is in a known state
    I2C_DEV->CMD = I2C_CMD_ABORT;

    // Configure the GPIOs
    configure_gpios(conf_p->pullup);

    // Configuration done, turn off clock to the I2C peripheral
    enable_clock(false);

    /* Add 50% margin to timeout calculation */
    m_i2c_bit_timeout_ns = 1500000000 / conf_p->clock;

    m_current_xfer.free = true;

    return I2C_RES_OK;
}

i2c_res_e I2C_close(void)
{
    if (m_state == I2C_SM_ST_UNINITIALIZED)
    {
        return I2C_RES_NOT_INITIALIZED;
    }

    m_state = I2C_SM_ST_UNINITIALIZED;

    // Turn on clock to the I2C peripheral during configuration
    enable_clock(true);

    // Disable I2C peripheral interrupts, clear pending interrupt flags
    enable_interrupts(false, true);

    // Disable I2C IRQ
    Sys_disableAppIrq(I2C_IRQn);

    // Issue an ABORT command to make sure the peripheral is in a known state
    I2C_DEV->CMD = I2C_CMD_ABORT;

    // Set all gpios as default configuration
    release_gpios();

    // Disable I2C peripheral
#ifdef _SILICON_LABS_32B_SERIES_2
    I2C_DEV->EN_CLR = I2C_EN_EN;
#endif
    I2C_DEV->CTRL = _I2C_CTRL_RESETVALUE;

    // Configuration done, turn off clock to the I2C peripheral
    enable_clock(false);

    return I2C_RES_OK;
}

i2c_res_e I2C_transfer(i2c_xfer_t * xfer_p, i2c_on_transfer_done_cb_f cb)
{
    if (m_state == I2C_SM_ST_UNINITIALIZED)
    {
        return I2C_RES_NOT_INITIALIZED;
    }

    // Check if a transfer is already ongoing
    if (!m_current_xfer.free)
    {
        return I2C_RES_BUSY;
    }

    // Check transfer
    if (((xfer_p->read_ptr != NULL) && (xfer_p->read_size == 0)) ||
        ((xfer_p->read_ptr == NULL) && (xfer_p->read_size != 0)) ||
        ((xfer_p->write_ptr != NULL) && (xfer_p->write_size == 0)) ||
        ((xfer_p->write_ptr == NULL) && (xfer_p->write_size != 0)))
    {
        return I2C_RES_INVALID_XFER;
    }

    // Setup the transfer
    m_current_xfer.client_xfer = xfer_p;
    m_current_xfer.cb = cb;
    m_current_xfer.res = I2C_RES_OK;
    m_current_xfer.pos = 0;
    m_current_xfer.free = false;
    m_current_xfer.write_done = false;
    m_current_xfer.done = false;
    m_current_xfer.mstop_detected = false;

    // Start the transfer
    i2c_state_machine(I2C_SM_CMD_START);

    // Is it a blocking call
    if (m_current_xfer.cb == NULL)
    {
        app_lib_time_timestamp_hp_t end;

        /* Timeout calculation, (timeout is in us)/
         * - Start Address R/W bit is 10bits
         * - For each byte read or written add 1 ack bit so 9bits
         */
        uint32_t timeout = ((10 + xfer_p->read_size*9 + xfer_p->write_size*9) *
                            m_i2c_bit_timeout_ns) / 1000;

        end = lib_time->addUsToHpTimestamp(lib_time->getTimestampHp(),
                                           timeout);

        // Active wait until end of transfer or timeout
        while (!m_current_xfer.done &&
               lib_time->isHpTimestampBefore(lib_time->getTimestampHp(),end) );

        m_current_xfer.free = true;

        if(!m_current_xfer.done)
        {
            return I2C_RES_BUS_HANG;
        }
        else
        {
            return m_current_xfer.res;
        }
    }

    return I2C_RES_OK;
}
